<resources>
  <string name="app_name">Kotlout</string>

  <string name="my_experiments">My Experiments</string>
  <string name="explore_experiments">Explore</string>
  <string name="subscribed_experiments">Subscriptions</string>
  <string name="title_activity_profile">ProfileActivity</string>

  <!-- User Profile Activity -->
  <string name="profile_first_name_text">First Name</string>
  <string name="profile_last_name_text">Last Name</string>
  <string name="profile_email_text">Email</string>
  <string name="profile_phone_text">Phone Number</string>

  <!-- QR codes -->
  <string name="scannable_intent_scheme">example</string>
  <string name="scannable_intent_host">kotlout</string>
  <string name="scannable_intent_label">Local intent</string>
  <string name="scannable_intent_label_remote">Remote intent</string>
  <string name="uri_experiment_type">EXPERIMENT_ID</string>
  <string name="title_activity_codescanner">Code Scanner</string>
  <string name="scan_code_menu_button_title">Scan QR or barcode</string>

  <!-- New Experiment Activity -->
  <string name="new_experiment_min_trials">Minimum Number of Trials</string>
  <string name="new_experiment_region">Region</string>
  <string name="new_experiment_description">Description</string>
  <string name="btn_new_experiment_add">Add Experiment</string>
  <string name="new_experiment_geolocation">Require Geolocation?</string>
  <string name="title_activity_new">New Experiment</string>
  <string name="share_experiment">Share Experiment</string>
  <string name="subscribe_to_experiment">Subscribe to Experiment</string>
  <string name="view_info_text">Info</string>
  <string name="view_map_text">Map</string>
  <string name="view_trials_text">Trials</string>
  <string name="title_activity_view">Experiment Info</string>

  <string-array name="experiment_types">
    <item>Binomial</item>
    <item>Non-Negative Integer</item>
    <item>Count</item>
    <item>Measurement</item>
  </string-array>

  <!-- Discussion Posts -->
  <string name="add_post_hint">Submit a new question</string>
  <string name="default_author_name">Anonymous</string>
  <string name="default_comment_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nisi tellus, porta eget varius nec, elementum quis nulla. Duis dapibus venenatis est, ut aliquet libero fringilla vitae. Sed at lectus eu lectus blandit dictum sed eu enim. Vestibulum malesuada convallis libero ac tempor. Sed eleifend sit amet nibh vel dictum.</string>
  <string name="default_comment_date">2021–03–16 14:03</string>
  <string name="comment_reply_string">Reply to Anonymous: Pellentesque nisi tellus adipiscing lol this is actual text now</string>
  <string name="comment_date_format">yyyy-MM-dd HH:mm</string>
  <string name="experiment_long_click_menu_title">Experiment Options</string>
  <string name="unpublish_experiment_option">Unpublish</string>
  <string name="publish_experiment_option">Publish</string>
  <string name="end_experiment_option">End</string>
  <string name="resume_experiment_option">Resume</string>
  <string name="title_activity_trial_new">New Trial</string>
  <string name="title_activity_experiment_view">Experiment View</string>
  <string name="unsubscribe_from_experiment">Unsubscribe from Experiment</string>
  <string name="title_activity_search">Search Experiments</string>
  <string name="search_hint">Experiments</string>
  <string name="blocklist_file_key">xyz.kotlout.TRIAL_BLOCKLIST</string>
  <string name="quartile_3">Quartile 3:</string>
  <string name="quartile_1">Quartile 1:</string>
  <string name="std_dev">Std. Dev:</string>
  <string name="median">Median:</string>
  <string name="mean">Mean:</string>
  <string name="n_a">N/A</string>
  <string name="discussion_option_menu_name">Discussion</string>
  <string name="discussion_reply_message">\@%1$s %2$s</string>
  <string name="discussion_deleted_message">[deleted]</string>
  <string name="discussion_fetching">fetching information…</string>
  <string name="discussion_reply_format">%1$s: %2$s</string>
  <string name="discussion_title">Experiment Discussion</string>
  <string name="fab_new_trial">Create new trial</string>
  <string name="menu_search">Search for experiments</string>
  <string name="menu_profile">Show user profile</string>
  <string name="trial_success">Success</string>
  <string name="trial_fail">Failure</string>
  <string name="trial_record_location">Record Location</string>
  <string name="trial_set_location">Set Location</string>
  <string name="trial_submit_trial">Submit Trial</string>
  <string name="trial_register_barcode">Register Barcode</string>
  <string name="trial_scan_barcode">Scan Barcode</string>
  <string name="trial_loading_location">Loading location…</string>
</resources>
