<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="24dp"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  tools:context=".view.fragment.ProfileSheetFragment">
  <TextView
    android:id="@+id/tv_profile_sheet_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/profile_last_name_text"
    android:textSize="20sp"/>
  <TextView
    android:id="@+id/tv_profile_sheet_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/profile_email_text" />
  <TextView
    android:id="@+id/tv_profile_sheet_phone_number"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:text="@string/profile_phone_text" />
</LinearLayout>