<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true"
  tools:context=".view.fragment.ExperimentInfoFragment">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <xyz.kotlout.kotlout.view.InfoHeaderView
      android:id="@+id/ihv_experiment_info"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <com.github.mikephil.charting.charts.BarChart
      android:id="@+id/histogram"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:background="@android:color/white" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/mean" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/n_a"
          android:id="@+id/mean_text_view"/>

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/median" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/n_a"
          android:id="@+id/median_text_view"/>

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/std_dev" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/n_a"
          android:id="@+id/std_dev_text_view"/>
      </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">
        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/quartile_1" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/n_a"
          android:id="@+id/q1_text_view"/>

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/quartile_3" />

        <TextView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/n_a"
          android:id="@+id/q3_text_view"/>
      </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.BarChart
      android:id="@+id/trialInfo"
      android:layout_width="match_parent"
      android:layout_height="400dp"
      android:layout_marginBottom="50dp"
      android:background="@android:color/white" />
  </LinearLayout>

</ScrollView>